[tool.poetry]
name = "git-archiver"
version = "0.1.2"
description = ""
authors = ["Jorrit Wronski <jowr@ipu.dk>", "Albert Seligmann <ase@ipu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4"
python-gitlab = "^3.15.0"
pyinstaller = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
