[tool.poetry]
name = "git-archiver"
version = "0.1.4"
description = ""
authors = ["Maarten Winter <maaw@ipu.dk>", "Jorrit Wronski <jowr@ipu.dk>", "Albert Seligmann <ase@ipu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
python-gitlab = "^6.1.0"
pyinstaller = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
